MLE-23024 Refactor: merging test subprojects
We don't need the Java 11 / 17 split anymore.

Also fixed a handful of Sonar warnings. No functional changes though.